--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,10 +1,11 @@
-deploy.ant.properties.file=C:\\Users\\Lenovo\\AppData\\Roaming\\NetBeans\\8.1rc\\config\\GlassFishEE6\\Properties\\gfv3-83169375.properties
+deploy.ant.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\12.0\\config\\GlassFishEE6\\Properties\\gfv3-1594241664.properties
+file.reference.mysql-connector-java-8.0.23.jar=C:\\Users\\Admin\\Documents\\mysql-connector-java-8.0.23.jar
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/Lenovo/AppData/Roaming/NetBeans/8.1rc/config/GF_4.1/domain1
-j2ee.server.home=C:/Program Files/glassfish-4.1/glassfish
-j2ee.server.instance=[C:\\Program Files\\glassfish-4.1\\glassfish;C:\\Program Files\\glassfish-4.1\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=C:/Program Files/glassfish-4.1
+j2ee.server.domain=C:/Users/Admin/GlassFish_Server/glassfish/domains/domain1
+j2ee.server.home=C:/Users/Admin/GlassFish_Server/glassfish
+j2ee.server.instance=[C:\\Users\\Admin\\GlassFish_Server\\glassfish;C:\\Users\\Admin\\GlassFish_Server\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=C:/Users/Admin/GlassFish_Server
 javac.debug=true
 javadoc.preview=true
 selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
-user.properties.file=C:\\Users\\Lenovo\\AppData\\Roaming\\NetBeans\\8.1rc\\build.properties
+user.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
