--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.mysql-connector-java-8.0.23.jar=C:\\Program Files (x86)\\MySQL\\Connector J 8.0\\mysql-connector-java-8.0.23.jar
+file.reference.selenium-server-standalone-3.141.59.jar=C:\\Users\\Admin\\Documents\\selenium-server-standalone-3.141.59.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -54,7 +55,9 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}:\
+    ${file.reference.selenium-server-standalone-3.141.59.jar}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
